# zero2prod

./: Cargo.toml  Dockerfile  configuration.yml  docker-compose.yml  install.sh  readme.md  run_dev.sh
configuration/: base.yml  production.yml
migrations/: 20260205073224_create_subscription_tokens_table.sql  20260208014208_create_users_table.sql  20260208022814_add_salt_to_users.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: login.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  mod.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
