[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[dependencies]
actix-web = { version = "4.12.1", features = ["macros"] }
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
