[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[dependencies]
actix-web = { version = "4.12.1", features = ["macros"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.21"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0 "
validator = "0.20.0"
rand = { version = "0.9.2", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["json", "rustls"]

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tokio = {version = "1.49.0", features = ["macros", "rt"]}
wiremock = "0.6.5"
serde_json = "1.0.149"
linkify = "0.10.0"